k8s/home-automation/ha/home-assistant_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: home-automation
  annotations:
    metallb.universe.tf/loadBalancerIPs: 192.168.100.238
spec:
  type: LoadBalancer
  selector:
    app: home-assistant
  ports:
    - port: 8123
